tests/errors/nonnull_cast_rejects_null.dang
# Deferred values may be explicitly asserted non-null, but Coerce must reject
# null at runtime.
let bad = fromJSON("null") :: String!
